# mcp-code-mode

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  UPDATES.md  app.py  implementation-plan.md  mcp_servers.json  mcp_servers_hf.json  plan.md  pyproject.toml  requirements-dev.txt  requirements.txt  research.md
scripts/: debug_executor.py  fastmcp_echo_server.py  test_dspy_sandbox.py  test_integration.py
src/mcp_code_mode/: example_usage.py  executor.py  executor_server.py  mcp_manager.py  policies.py  sandbox_config.py  validate_agent.py
src/mcp_code_mode.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_mcp_manager_config.py
